css/style.css
/* ... */
.menu .logo {
  margin-left: 5%;
  width: 10%;
}

.menunav {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 100%;
}

.listItemsMenu {
  width: 100%;
  display: flex;
}

.listItemsMenu > li {
  list-style: none;
  margin-left: 2%;
}

.listItemsMenu > li > a {
  color: #737373;
  font-size: 14px;
  font-weight: 700;
  text-decoration: none;
}

.listItemsMenu > li > select {
  border: none;
  font-size: 14px;
}

/* mobile menu here */
.mobileListItemsMenu {
  display: flex;
}

.mobileListItemsMenu li {
  list-style: none;
}

/* mobile menu here */
.sign {
  margin-right: 5%;
}

.sign > ul {
  margin: 0;
  display: flex;
  justify-content: center;
  align-items: center;
}

.sign > ul > li {
  list-style: none;
}

.signInUp {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  gap: 10px;
  color: #23a6f0;
}

.signInUp img {
  width: 12px;
  height: 12px;
}

.signInUp a {
  color: #23a6f0;
  font-size: 14px;
  font-weight: 600;
  text-decoration: none;
}

.greetingsDiv {
  display: none;
  justify-content: center;
  align-items: center;
  gap: 5px;
  margin-right: 3%;
}

.greeting, .greetingEmail {
  margin-top: 15px;
  color: #23a6f0;
  font-weight: 600;
}

.logoutButton {
  width: 1.5em;
  margin-left: 2em;
}

.socialIcons {
  display: flex;
}

.socialIcons li {
  list-style: none;
}

/* mobile */
.mobileSocialIcons {
  flex-direction: row;
}

.mobileSocialIcons li {
  list-style: none;
}
/* mobile */

.carrousel {
  text-align: center;
  width: 100vw;
  height: 100vh;
}

.carousel1Banner {
  display: flex;
  justify-content: center;
  align-items: flex-end;
  background-color: #01b4da;
  width: 100vw;
  height: 90vh;
}

.banner1Description {
  display: flex;
  flex-direction: column;
  gap: 30px;
  width: 35%;
  align-items: flex-start;
  margin-bottom: 15%;
}

.banner1Description > h5 {
  font-size: 16px;
  color: #ffffff;
}

.banner1Description h1 {
  font-size: 50px;
  font-weight: 700;
  color: #ffffff;
}

.banner1Description h4 {
  font-size: 14px;
  font-weight: 400;
  color: #ffffff;
}

.shopNowButton {
  color: white;
  border-radius: 5px;
  height: 62px;
  width: 221px;
  background-color: #2dc071;
  border: 0px;
  cursor: pointer;
}

.shopNowButton h3 {
  font-size: 24px;
  font-weight: 700;
}

.banner1Image {
  height: 90%;
}

.editor {
  margin-top: 5%;
  width: 100vw;
  height: 100vh;
}

.editor .editorTitle {
  margin-top: 5%;
  text-align: center;
}

.editor .editorTitle > h3 {
  font-weight: 600;
}

.gridImagesDiv {
  height: 80%;
  display: flex;
  justify-content: center;
  align-items: center;
}

.editorColumns {
  display: grid;
  grid-template-columns: repeat(4, auto);
  gap: 2%;
  justify-content: center;
  align-items: center;
  margin-top: 5%;
}

.gridImages {
  display: flex;
  gap: 20px;
  justify-content: center;
  align-items: center;
  width: 80%;
  height: 100%;
}

.col3 {
  display: flex;
  flex-direction: column;
  gap: 20px;
}

.buttonGrid1 {
  position: absolute;
  z-index: 1;
  width: 170px;
  height: 48px;
  font-size: 16px;
  font-weight: 700;
  border: 0px;
  margin-left: -400px;
  margin-top: 400px;
}

.buttonGrid2 {
  position: absolute;
  z-index: 1;
  width: 170px;
  height: 48px;
  font-size: 16px;
  font-weight: 700;
  border: 0px;
  margin-left: -200px;
  margin-top: 400px;
}

.buttonGrid3 {
  position: absolute;
  z-index: 1;
  width: 170px;
  height: 48px;
  font-size: 16px;
  font-weight: 700;
  border: 0px;
  margin-left: -200px;
  margin-top: 150px;
}
.image3 {
  position: relative;
}
.photos:hover {
  opacity: 0.5;
}

.buttonGrid1,
.buttonGrid2,
.buttonGrid3:hover {
  cursor: pointer;
}

.bestsellers {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 100vw;
  height: 100%;
}
.bestsellersTitle {
  text-align: center;
}

.bestsellersCards {
  width: 70%;
  display: grid;
  grid-template-columns: repeat(4, auto);
  gap: 2%;
  justify-content: center;
  align-items: center;
  margin-top: 5%;
}

.bestsellersCards div {
  height: 615px;
  border: 0px;
}

.card {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin: 5%;
}

.imageCard {
  transition: transform 0.2s;
}

.imageCard:hover {
  transform: scale(1.1);
}

.preco {
  height: 20px;
  margin-top: 5%;
  display: flex;
  justify-content: center;
}

.nameProd {
  font-size: 16px;
  margin-top: 10%;
  font-weight: 600;
}

.descriptionProd {
  font-size: 14px;
  color: #737373;
  margin-top: 5%;
}

.preco .originalPrice {
  color: blanchedalmond;
  margin: 0 5%;
}
.preco .discountPrice {
  color: #23856d;
  margin: 0;
}

.colorsProd {
  text-align: center;
  justify-content: center;
  padding-top: 5%;
}

.colorSelector {
  transition: transform 0.2s;
}

.colorSelector:hover {
  transform: scale(1.1);
  cursor: pointer;
}

.carousel_2 {
  text-align: center;
  margin-top: 5%;
  width: 100vw;
  height: 100vh;
}

.carouselBanner {
  display: flex;
  justify-content: center;
  align-items: flex-end;
  background-color: #23856d;
  width: 100vw;
  height: 90vh;
}

.bannerDescription {
  display: flex;
  flex-direction: column;
  gap: 30px;
  width: 35%;
  align-items: flex-start;
  margin-bottom: 15%;
}

.bannerDescription > h5 {
  font-size: 16px;
  color: #ffffff;
}

.bannerDescription h1 {
  font-size: 50px;
  font-weight: 700;
  color: #ffffff;
}

.bannerDescription h4 {
  font-size: 14px;
  font-weight: 400;
  color: #ffffff;
}

.bannerPriceBtn {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 5%;
}

.bannerPriceBtn > h3 {
  color: #ffffff;
  font-size: 24px;
  font-weight: 700;
}

.buttonAddCart {
  color: white;
  border-radius: 5px;
  height: 52px;
  width: 151px;
  background-color: #2dc071;
  border: 0px;
}

.buttonAddCart:hover {
  cursor: pointer;
}

.bannerImage {
  height: 90%;
}

.summer {
  display: flex;
  justify-content: center;
  width: 100vw;
  height: 100vh;
}
/* ... */

